--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@ body{
     font-family:Arial, Helvetica, sans-serif;
     font-size: 20px;
     margin: 20px;
-    background-image: url("https://media.discordapp.net/attachments/832979009226145813/1155269122217746452/coins.png");
+    background-image: url("nothingorsomethingornothing.png");
 }
 
 a{
