--- a/main.css
+++ b/main.css
@@ -1,1 +1,64 @@
+@font-face {
+    font-family: 'fontA1';
+    src: url('font1.ttf') format('truetype'); /* Specify the path to your font file */
+}
 
+body {
+    color:white;
+    background-color: rgb(20, 19, 19);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    margin: 20px;
+}
+
+body, html {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.backgroundimage {
+    background-image: url('coingif.gif');
+    background-size: cover;
+    background-position: center;
+    color: white; 
+    text-align: center;
+    position: absolute;
+    top: 55px;
+    left: 0;
+    width: 100%;
+    height: 55vh;
+    padding: 70px;
+    font-size: 24px;
+    font-weight: bold;
+    filter: brightness(0.4);
+    z-index: -1;
+}
+
+.border {
+    border: 3px solid #ffffff;
+}
+.highlightedtext {
+    background-color: rgb(231, 220, 57);
+}
+
+.centered {
+    text-align: center !important;
+}
+
+.largetext {
+    font-size: 50px !important;
+}
+
+.font1 {
+    font-family: 'fontA1';
+}
+
+.custom-hr {
+    border: none; /* Remove default border */
+    height: 2px; /* Set the height of the line */
+    background-color: #ffffff; /* Set the line color */
+    margin: 20px 0; /* Add margin for spacing */
+}
