--- a/main.css
+++ b/main.css
@@ -20,7 +20,7 @@ body, html {
 }
 
 .backgroundimage {
-    background-image: url('coingif.gif');
+    background-image: url('coingif.mov');
     background-size: cover;
     background-position: center;
     color: white; 
